Revision history for Plack-Middleware-Statsd

{{$NEXT}}
  [Documentation]
  - Updated copyright year,

v0.7.0    2024-07-13 12:51:37+01:00 Europe/London
  [Enhancements]
  - Code was adapted to use newer syntax features.

  [Incompatible Changes]
  - Bumped minimum version of Perl to v5.20.

v0.6.3    2023-06-15 19:45:18+01:00 Europe/London
  [Enhancements]
  - Revert to using Try::Tiny instead of Feature::Compat::Try, since the former is already used by Plack.

  [Documentation]
  - Reformated KNOWN ISSUES section.

  - Clarified support policy for older Perl versions.

  - Bumped copyright year.

v0.6.2    2022-12-11 16:07:04+00:00 Europe/London
  [Enhancements]
  - Simplified code for tracking Content-Type headers.

  [Documentation]
  - Documented support for older Perl versions.

  - Fixed typo.

  - Added note about psgix.informational callback.

  [Other]
  - Removed redundant import.

  - Added GitHub Actions to run tests.

  [Tests]
  - Added missing author prereq for Test::Vars.

v0.6.1    2022-09-02 16:05:17+01:00 Europe/London
  [Other]
  - Signed distribution.

v0.6.0    2022-07-26 16:50:26+01:00 Europe/London
  [Incompatable Changes]
  - Minimum Perl version is v5.14.

  [Enhancements]
  - Use Feature::Compat::Try instead of Try::Tiny to catch errors.

  [Documentation]
  - Bump copyright year.

  - Fixed encoding of links in README.

  [Toolchain]
  - Updated MANIFEST.SKIP.

v0.5.1    2021-07-03 14:08:05+01:00 Europe/London
  [Documentation]
  - Documented the version required for the catch_errors attribute.

v0.5.0    2021-06-15 17:03:29+01:00 Europe/London
  [Enhancements]
  - Add catch_errors option to handle errors in the application.

v0.4.7    2021-04-27 16:47:35+01:00 Europe/London
  [Bug Fixes]
  - Use sample_rate for content length metrics.

v0.4.6    2021-04-21 16:51:41+01:00 Europe/London
  [Enhancements]
  - Check if internal methods are unused before fetching arguments.

  - Improve argument handling for internal methods.
