@@ -4,6 +4,9 @@ Revision history for Plack-Middleware-Statsd
   [Documentation]
   - Updated copyright year,
 
+  [Tests]
+  - Add more author tests.
+
 v0.7.0    2024-07-13 12:51:37+01:00 Europe/London
   [Enhancements]
   - Code was adapted to use newer syntax features.
